# rust-mcp-filesystem

./: Cargo.toml
docs/: capabilities.md
src/: handler.rs
