[package]
name = "rust-mcp-filesystem"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/rust-mcp-stack/rust-mcp-filesystem"
authors = ["Ali Hashemi"]
description = "Blazing-fast, asynchronous MCP server for seamless filesystem operations."
homepage = "https://github.com/rust-mcp-stack/rust-mcp-filesystem"


[package.metadata.wix]
upgrade-guid = "944FE3C9-C8C2-4114-8C8F-5330720E781F"
path-guid = "0BBAC013-2FD2-42B6-9815-D992FAD3F88E"
license = false
eula = false

[dependencies]
rust-mcp-sdk = { version = "0.6.1", default-features = false, features = [
    "server",
    "macros",
    "2025_06_18",
] }

thiserror = { workspace = true }
dirs = { workspace = true }
glob = "0.3"
walkdir = { workspace = true }
derive_more = { version = "2.0", features = ["display", "from_str"] }
similar = "=2.7"
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
async_zip = { version = "0.0", features = ["full"] }
grep = "0.3"

[dev-dependencies]
tempfile = "3.2"



[package.metadata.typos]
default.extend-ignore-re = ["4ded5ca"]
